infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: alanbui/blog-client:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP # optional because it's ClusterIP by default
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # (service port)
      targetPort: 3000 # (pod port, usually same as port)
