infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: alanbui/blog-comments:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP # optional because it's ClusterIP by default
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # (service port)
      targetPort: 4001 # (pod port, usually same as port)
