infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts # find all pods with label 'app: posts' and expose them to the outside world
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # (service port)
      targetPort: 4000 # (pod port, usually same as port)
