infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: # help ingress controller understand we are feeding it some routing rules
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # to use regex for wild card in paths
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service: 
                name: posts-clusterip-srv
                port: 
                  number: 4000
          - path: /post/?(.*)/comments
            pathType: Prefix
            backend:
              service: 
                name: comments-srv
                port: 
                  number: 4001
          - path: /posts
            pathType: Prefix
            backend:
              service: 
                name: query-srv
                port: 
                  number: 4002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service: 
                name: client-srv
                port: 
                  number: 3000
